@@ -240,6 +240,7 @@ extern Eina_List             *stack;
 extern Eina_List             *params;
 extern Edje_File             *edje_file;
 extern Eina_List             *edje_collections;
+extern Eina_Hash             *edje_collections_lookup;
 extern Eina_List             *externals;
 extern Eina_List             *fonts;
 extern Eina_List             *codes;
