@@ -12,6 +12,7 @@ Additions:
 Improvements:
     * Check the number of parameter for image in edc.
     * O(1) lookup used when searching Part_Lookup in edje_cc.
+    * O(1) lookup when generating alias of group.
 
 Fixes:
 
